--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
+/* Variables */
+
 :root {
   color-scheme: light;
-
   --theme-bg: #fafafa;
   --theme-on-bg: #000000;
   --theme-offset-bg: #bebebe;
@@ -9,7 +10,6 @@
 @media (prefers-color-scheme: dark) {
   :root {
     color-scheme: dark;
-
     --theme-bg: #000000;
     --theme-on-bg: #fafafa;
     --theme-offset-bg: #7a7a7a;
@@ -29,6 +29,8 @@
   --theme-on-bg: #fafafa;
   --theme-offset-bg: #7a7a7a;
 }
+
+/* Styles */
 
 * {
   box-sizing: border-box;
